--- a/public/static/global.css
+++ b/public/static/global.css
@@ -324,14 +324,16 @@ button:focus {
 /* } */
 /* leaflet-gmx-icon leaflet-gmx-icon-filters leaflet-bar leaflet-gmx-icon-img leaflet-gmx-icon-sprite leaflet-control leaflet-gmx-icon-active leaflet-gmx-icon-filters-active */
 
+
 .leaflet-gmx-icon-filters .win {
     position: absolute;
     left: 40px;
-    min-width: 120px;
-    max-width: 308px;
+    white-space: nowrap;
     padding: 6px 10px 6px 6px;
     color: #333;
     background: #fff;
+    overflow-y: auto;
+    max-height: 674px;
 }
 .hidden {
     display: none;
